<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#EEE"
    tools:context="com.recipe.firebase.firebaserecipecodelab.FailActivity">

    <TextView
        android:text="@string/try_again_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:textSize="40sp" />

    <Button
        android:text="@string/try_again"
        android:textColor="#FFF"
        android:background="@color/accent"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/again_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/reward_button_text"
        android:textColor="#FFF"
        android:background="#AAA"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hint_button"
        android:layout_marginTop="80dp"
        android:layout_alignTop="@+id/again_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/home"
        android:textColor="#444"
        android:background="#DDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp" />

</RelativeLayout>
