<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#EEE"
    tools:context="com.recipe.firebase.firebaserecipecodelab.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:id="@+id/textView"
        android:layout_marginTop="25dp"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginTop="60dp"
        android:background="@color/primary_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textColor="#FFF"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_text"
            android:id="@+id/howToPlayText"
            android:layout_marginTop="23dp"
            android:textSize="25sp"
            android:textColor="#FFF"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@color/accent"
        android:text="@string/start"
        android:textColor="#FFF" />
</LinearLayout>
